--- a/server/web/views/layout.hbs
+++ b/server/web/views/layout.hbs
@@ -165,7 +165,7 @@
                 box-shadow: 0 0 8px rgba(0, 0, 0, .8);
                 -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
                 -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-                background-size: 150px 150px;
+                background-size: cover;
             }
 
             .imgDescription {
